[package]
name = "slackir"
version = "0.1.0"
authors = ["William Lee <wlee@mochify.com>"]
build = "build.rs"

[build-dependencies]
serde_codegen = "*"
syntex = "*"

[dependencies]
irc = "*"
serde = "*"
serde_json = "*"
websocket = "*"
toml = "*"
clap = { version = "*", features = ["unstable"] }
rustc-serialize = "*"
hyper = "*"
log = "*"
env_logger = "*"
